# assignment-opencl

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh
src/: bgrDilation.cl  bgrToYCbCr.cl  helloworld.c  helloworld.cpp  helloworld.h  helloworld.hpp  kernel.cl  lib.cpp  lib.hpp  main.c  main.cpp  openCL-lib.cpp  openCL-lib.hpp  openCL_lib.cpp  openCL_lib.hpp  openmp_lib.cpp  openmp_lib.hpp  ycbcr-kernel.cl
tests/: test.cpp  test_helloworld.cpp  test_lib.cpp
